--- a/src/Containers/Header/Header.css
+++ b/src/Containers/Header/Header.css
@@ -99,3 +99,57 @@
   width: 100%;
   height: 100%;
 }
+
+@media screen and (max-width: 1050px) {
+  .gpt3__header {
+    flex-direction: column;
+  }
+  .gpt3__header-content {
+    margin: 0 0 3;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .gpt3__header h1 {
+    font-size: 48px;
+    line-height: 60px;
+  }
+  .gpt3__header p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .gpt3__header-content__people {
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .gpt3__header-content__input input {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .gpt3__header-content__input button {
+    font-size: 15px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .gpt3__header h1 {
+    font-size: 36px;
+    line-height: 48px;
+  }
+  .gpt3__header p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .gpt3__header-content__input input {
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  .gpt3__header-content__input button {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
