--- a/src/Containers/WhatGPT3/WhatGPT3.css
+++ b/src/Containers/WhatGPT3/WhatGPT3.css
@@ -58,9 +58,9 @@
   flex-wrap: wrap;
 }
 
-/* .gpt3__whatGPT3-feature .gpt3__whatGPT3-container__feature-text {
+.gpt3__whatGPT3-feature .gpt3__whatGPT3-container__feature-text {
   max-width: 700px;
-} */
+}
 
 .gpt3__whatGPT3-container {
   display: flex;
@@ -79,8 +79,8 @@
 
 .gpt3__whatGPT3-heading h1 {
   font-weight: 800;
-  font-size: 34px;
-  line-height: 45px;
+  font-size: 24px;
+  line-height: 32px;
   font-family: var(--font-family);
   max-width: 510px;
 }
@@ -88,7 +88,7 @@
 .gpt3__whatGPT3-heading p {
   font-weight: 500;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 25px;
   font-family: var(--font-family);
   color: var(--color-subtext);
   cursor: pointer;
@@ -117,9 +117,9 @@
     margin-top: 0.5rem;
   }
 
-  .gpt3__whatgpt3-heading h1 {
-    font-size: 28px;
-    line-height: 40px;
+  .gpt3__whatgpt3-container .gpt3__features-container__feature {
+    margin: 1rem 0;
+    min-width: 100%;
   }
 }
 
@@ -128,5 +128,15 @@
   .gpt3__whatgpt3-container .gpt3__features-container__feature {
     margin: 1rem 0;
     min-width: 100%;
+  }
+
+  .gpt3__whatGPT3-heading h1 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .gpt3__whatGPT3-heading p {
+    font-size: 12px;
+    line-height: 20px;
   }
 }
